[gd_scene load_steps=4 format=3 uid="uid://c6v8jfs7u3xw1"]

[ext_resource type="Script" uid="uid://co165s8gy1j0c" path="res://scripts/ui/shelf_surface_adapter.gd" id="1"]

[sub_resource type="RectangleShape2D" id="2"]
size = Vector2(152, 6)

[sub_resource type="RectangleShape2D" id="1"]
size = Vector2(152, 66.2)

[node name="ShelfSurface" type="Node2D"]
script = ExtResource("1")

[node name="SurfaceBody" type="StaticBody2D" parent="."]
collision_layer = 1
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="SurfaceBody"]
position = Vector2(0, 12)
shape = SubResource("2")

[node name="DropArea" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="DropArea"]
position = Vector2(0, -21)
shape = SubResource("1")

[node name="DropLine" type="Node2D" parent="."]
position = Vector2(0, 12)

[node name="SurfaceRef" type="Node2D" parent="."]
position = Vector2(0, 12)

[node name="SurfaceLeft" type="Node2D" parent="."]
position = Vector2(-120, 12)

[node name="SurfaceRight" type="Node2D" parent="."]
position = Vector2(120, 12)

[node name="ItemsRoot" type="Node2D" parent="."]
y_sort_enabled = true

[node name="VisualBar" type="ColorRect" parent="."]
offset_left = -120.0
offset_top = 12.0
offset_right = 120.0
offset_bottom = 16.0
color = Color(0, 0, 0, 1)
metadata/_edit_use_anchors_ = true
